--- a/submit.html
+++ b/submit.html
@@ -2,16 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>New Post - My Reddit Clone</title>
+  <title>Submit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
+
 </head>
+
 <body>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">My Reddit Clone</a>
+      <a class="navbar-brand" href="#">ExplainMe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
