--- a/post.html
+++ b/post.html
@@ -21,15 +21,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
+        <form class="d-flex mx-auto">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 400px">
+        </form>
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">Profile</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
@@ -38,8 +37,8 @@
   <main role="main">
       <div class="container">
       <div class="row">
-          <div class="col">
-            
+          <div class="col-md-9">
+
               <div class="card mb-4">
                   <div class="card-body">
                   <h5 class="card-title">First post</h5>
@@ -157,6 +156,23 @@
             
 
           </div>
+
+          <!-- Right Section: Sidebar -->
+          <div class="col-md-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Sidebar Title</h5>
+                <p class="card-text">Su nulla finibus, quis rutrum magna tincidunt. Sed et turpis a arcu commodo ullamcorp
+                  er quis sit amet lorem. Donec tincidunt eros ac velit sollicitudin, id blandit enim pelle
+                  ntesque. Integer bibendum consequat ante ac efficitur. Suspendisse fringilla, lacus non solli
+                  citudin posuere, felis elit malesuada metus, vel iaculis eros metus sit amet ex. Fusce posuer
+                  e est sed sapien molestie, quis semper orci suscipit. Nunc tincidunt orci enim, vel pharetra neque ullamcor
+                  iscing elit. Sed eget felis eget enim lobortis consequat id id ante. Fusce sodales er
+                  os eu nulla finibus, quis rutrum magna tincidunt. Sed et turpis a arcu commodo ullamcorpt</p>
+              </div>
+            </div>
+          </div>
+
       </div>
       </div>
 
