--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -43,16 +43,20 @@
 
 
               <div class="card mb-4">
-                  <style>
-                      a {
-                          color: inherit;
-                          text-decoration: none;
-                      }
-                    </style>
-                  <a href="post.html">
+                  <a href="post1.html">
                   <div class="card-body">
-                  <h5 class="card-title">First post</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget felis eget enim lobortis consequat id id ante. Fusce sodales eros eu nulla finibus, quis rutrum magna tincidunt. Sed et turpis a arcu commodo ullamcorper quis sit amet lorem. Donec tincidunt eros ac velit sollicitudin, id blandit enim pellentesque. Integer bibendum consequat ante ac efficitur. Suspendisse fringilla, lacus non sollicitudin posuere, felis elit malesuada metus, vel iaculis eros metus sit amet ex. Fusce posuere est sed sapien molestie, quis semper orci suscipit. Nunc tincidunt orci enim, vel pharetra neque ullamcorper nec.</p>
+                  <h5 class="card-title">How to install Python in Windows?</h5>
+                  <p id="post1" class="card-text fixed-size">
+                    PythonServer Side ProgrammingProgramming<br>
+                    Python is a widely used high-level programming language. To write and execute code in python, we first need to install Python on our system.<br>
+                    <br>
+                    Installing Python on Windows takes a series of few easy steps.<br>
+                    <br>
+                    Step 1 − Select Version of Python to Install<br>
+                    Python has various versions available with differences between the syntax and working of different versions of the language. We need to choose the version which we want to use or need. There are different versions of Python 2 and Python 3 available.<br>
+                    <br>
+                    Step 2 − Download Python Executable Installer<br>
+                    On the web browser, in the official site of python (www.python.org), move to the Download for Windows section.<br>
                   <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group">
@@ -74,38 +78,151 @@
               </div>
 
               <div class="card mb-4">
+                <a href="post2.html">
                   <div class="card-body">
-                  <h5 class="card-title">Second post</h5>
-                  <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h5 class="card-title">Batch Script Tutorial</h5>
+                  <p class="card-text fixed-size">
+                    Batch Script is incorporated to automate command sequences which are repetitive in nature. Scripting is a way by which one can alleviate this necessity by automating these command sequences in order to make one’s life at the shell easier and more productive. In most organizations, Batch Script is incorporated in some way or the other to automate stuff.<br>
+                    <br>
+                    Some of the features of Batch Script are −<br>
+                    <br>
+                    Can read inputs from users so that it can be processed further.<br>
+                    <br>
+                    Has control structures such as for, if, while, switch for better automating and scripting.<br>
+                    <br>
+                    Supports advanced features such as Functions and Arrays.<br></p>
                   <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+                  <div class="d-flex flex-row justify-content-start align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-up"></i>
+                      </button>
+                    </div>
+                    <div class="ml-2 mr-2">
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10</small></p>
+                    </div>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-down"></i>
+                      </button>
+                    </div>
                   </div>
+                  </div>
+                </a>
               </div>
 
               <div class="card mb-4">
+                <a href="post3.html">
                   <div class="card-body">
-                  <h5 class="card-title">Third post</h5>
-                  <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h5 class="card-title">How to cook Rice</h5>
+                  <p id="demo" class="card-text fixed-size">Just can't master the art of cooking rice on the stovetop? No stress—you're not alone. Many things can go wrong when prepping rice: too gummy, too hard, burnt. But, once you've got it down, it's simple to get it right every time. Before you know it, you'll have a steaming bowl of rice ready to be made into our easy Buddha bowls or topped with beef and broccoli for the easiest weeknight dinner. <br>
+                    <br>
+                    Follow our steps with our top tips and tricks to master rice on the stovetop every time: <br>
+                    <br>
+                    1. Rinse the rice.<br>
+                    <br>
+                    Ugh, I know, rinsing is annoying, but it really is worth it to get rid of the dusty starches that may make the rice too sticky. Just place your rice in a fine mesh strainer and rinse under cold water until the water runs clear.<br>
+                    <br>
+                    2. Remember the ratio. <br>
+                    <br>
+                    For most types of rice, you'll always use a ratio of 1 cup rice to 2 cups water, which you can scale up or down. (Double-check your rice packaging to be sure.) Feel free to swap in chicken or vegetable broth for more flavor.<br>
+                    <br></p>
                   <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+                  <div class="d-flex flex-row justify-content-start align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-up"></i>
+                      </button>
+                    </div>
+                    <div class="ml-2 mr-2">
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10</small></p>
+                    </div>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-down"></i>
+                      </button>
+                    </div>
                   </div>
+                  </div>
+                </a>
+              </div>
+
+              
+    
+
+              <div class="card mb-4">
+                <a href="post4.html">
+                  <div class="card-body">
+                  <h5 class="card-title">How to install Python</h5>
+                  <p class="card-text fixed-size">
+                    In order to become Python developer, the first step is to learn how to install or update Python on a local machine or computer. In this tutorial, we will discuss the installation of Python on various operating systems.<br>
+                    <br>
+                    Installation on Windows<br>
+                    Visit the link https://www.python.org/downloads/ to download the latest release of Python. In this process, we will install Python 3.8.6 on our Windows operating system. When we click on the above link, it will bring us the following page.<br>
+                    <br>
+                    Step - 1: Select the Python's version to download.<br>
+                    <br>
+                    Click on the download button.<br>
+                    <br>
+                    Python Environment Set-up<br>
+                    Step - 2: Click on the Install Now<br>
+                    <br>
+                    </p>
+                  <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+                  <div class="d-flex flex-row justify-content-start align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-up"></i>
+                      </button>
+                    </div>
+                    <div class="ml-2 mr-2">
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10</small></p>
+                    </div>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-down"></i>
+                      </button>
+                    </div>
+                  </div>
+                  </div>
+                </a>
               </div>
 
               <div class="card mb-4">
+                <a href="post5.html">
                   <div class="card-body">
-                  <h5 class="card-title">Fourth post</h5>
-                  <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h5 class="card-title">Visual Studio Code Shortcuts for Windows</h5>
+                  <p class="card-text fixed-size">General<br>
+                    Ctrl+Shift+P, F1 Show Command Palette<br>
+                    Ctrl+P Quick Open, Go to File…<br>
+                    Ctrl+Shift+N New window/instance<br>
+                    Ctrl+Shift+W Close window/instance<br>
+                    Ctrl+, User Settings<br>
+                    Ctrl+K Ctrl+S Keyboard Shortcuts<br>
+                    Basic editing<br>
+                    Ctrl+X Cut line (empty selection)<br></p>
                   <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+                  <div class="d-flex flex-row justify-content-start align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-up"></i>
+                      </button>
+                    </div>
+                    <div class="ml-2 mr-2">
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10</small></p>
+                    </div>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <i class="fa-arrow-down"></i>
+                      </button>
+                    </div>
                   </div>
-              </div>
-
-              <div class="card mb-4">
-                  <div class="card-body">
-                  <h5 class="card-title">Fith post</h5>
-                  <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
                   </div>
+                </a>
               </div>
 
           </div>
       </div>
       </div>
   </main>
+
