--- a/submit.html
+++ b/submit.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
-    
+  <script src="script.js"></script>
+
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">ExplainMe</a>
+      <a class="navbar-brand" href="ExplainMe.html">ExplainMe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,7 +41,7 @@
         <h5 class="mb-0">New Post</h5>
       </div>
       <div class="card-body">
-        <form>
+        <form onsubmit="submitForm(event)">
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" class="form-control" id="title" name="title" required>
