edit history made

--- a/p4-4.html
+++ b/p4-4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>ExplainMe post3</title>
+    <title>ExplainMe post4 edit4</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -47,48 +47,29 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <h5 class="card-title">How To Cook Rice</h5>
+                  <h5 class="card-title">How to install Python in Windows? (Was updated)</h5>
                   <p class="card-text">
-                    Just can't master the art of cooking rice on the stovetop? No stress—you're not alone. Many things can go wrong when prepping rice: too gummy, too hard, burnt. But, once you've got it down, it's simple to get it right every time. Before you know it, you'll have a steaming bowl of rice ready to be made into our easy Buddha bowls or topped with beef and broccoli for the easiest weeknight dinner. <br>
+                    In order to become Python developer, the first step is to learn how to install or update Python on a local machine or computer. In this tutorial, we will discuss the installation of Python on various operating systems.<br>
                     <br>
-Follow our steps with our top tips and tricks to master rice on the stovetop every time: <br>
+Installation on Windows<br>
+Visit the link https://www.python.org/downloads/ to download the latest release of Python. In this process, we will install Python 3.8.6 on our Windows operating system. When we click on the above link, it will bring us the following page.<br>
 <br>
-1. Rinse the rice.<br>
+Step - 1: Select the Python's version to download.<br>
 <br>
-Ugh, I know, rinsing is annoying, but it really is worth it to get rid of the dusty starches that may make the rice too sticky. Just place your rice in a fine mesh strainer and rinse under cold water until the water runs clear.<br>
+Click on the download button.<br>
 <br>
-2. Remember the ratio. <br>
+Python Environment Set-up<br>
+Step - 2: Click on the Install Now<br>
 <br>
-For most types of rice, you'll always use a ratio of 1 cup rice to 2 cups water, which you can scale up or down. (Double-check your rice packaging to be sure.) Feel free to swap in chicken or vegetable broth for more flavor.<br>
+Double-click the executable file, which is downloaded; the following window will open. Select Customize installation and proceed. Click on the Add Path check box, it will set the Python path automatically.<br>
 <br>
-3. Bring the water to a boil<br>
+Python Environment Set-up<br>
+We can also click on the customize installation to choose desired location and features. Other important thing is install launcher for the all user must be checked.<br>
 <br>
-Then, stir in your rice and salt. And if you want to add a tab of butter, too, go for it — your rice will taste 10x better.<br>
+Step - 3 Installation in Process<br>
 <br>
-4. Get a steady simmer.<br>
-<br>
-After adding the rice, the temperature of your water will drop significantly, and it'll stop boiling. Let it come back to a gentle simmer (otherwise you run the risk of your water cooking off faster than your rice gets tender).<br>
-<br>
-5. Don't take off the lid. <br>
-<br>
-Cover the saucepan and reduce heat to low. Though it will be tempting, keep the lid on! It's very important not to mess with the steam. <br>
-<br>
-6. Check at 18 minutes. <br>
-<br>
-For long grain white rice, I always set a timer for 18, knowing that it could need another minute or two. Let the rice be your indicator, not the water. If there's a little water leftover, it's totally fine! Just tilt the saucepan slightly to drain it out. (Cooking brown rice? Check at 30 minutes.)<br>
-<br>
-7. Leave it alone. <br>
-<br>
-Turn off the heat, replace the lid, and let it rest for a few minutes in the steamy saucepan. Patience is a virtue, my friend. <br><br>
-<br>
-8. Fluff it up!<br>
-<br>
-Use a fork to gently mix and lift rice to make sure that the grains don't stick together. <br>
-<br>
-If you have a rice cooker, the game is a lot easier. Use the same magic ratio and throw everything into the rice cooker, which does all the work for you. When the machine says it's ready, the same "leave it alone" and fluffing instructions apply.  <br>
-                  
                     </p>
-                  <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
+                  <p class="card-text"><small class="text-muted">Submitted by John Doe on 2023-03-28</small></p>
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
@@ -128,7 +109,6 @@ If you have a rice cooker, the game is a lot easier. Use the same magic ratio an
                   </div>
               </div>
 
-
             <!-- Comment Section -->
             <div class="card mb-4">
               <div class="card-body">
@@ -151,12 +131,12 @@ If you have a rice cooker, the game is a lot easier. Use the same magic ratio an
               <div class="card-body">
                 <h5 class="card-title">Edits History</h5>
                 <ul>
-                <li>04/04/2023</li>
-                <li>28/03/2023</li>
-                <li>14/03/2023</li>
-                <li>25/02/2023</li>
-                <li>22/02/2023</li>
-                <li>03/02/2023</li>
+                    <li><a href="post4.html">04/04/2023</a></li>
+                    <li><a href="p4-4.html">28/03/2023</a></li>
+                    <li><a href="p4-3.html">14/03/2023</a></li>
+                    <li><a href="p4-2.html">25/02/2023</a></li>
+                    <li><a href="p4-1.html">22/02/2023</a></li>
+                    <li><a href="p4-0.html">03/02/2023</a></li>
               </ul>
               </div>
             </div>
