--- a/post4.html
+++ b/post4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Reddit Clone</title>
+  <title>ExplainMe post4</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -26,9 +26,15 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="submit.html">New Post</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
             <a class="nav-link" href="#">Profile</a>
           </li>
         </ul>
+        
       </div>
     </div>
   </nav>
@@ -108,23 +114,16 @@ We are ready to work with the Python.<br>
                   </div>
               </div>
 
+            <!-- Comment Section -->
             <div class="card mb-4">
               <div class="card-body">
               <h5 class="card-title">Comments</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adip
-                iscing elit. Sed eget felis eget enim lobortis consequat id id ante. Fusce sodales er
-                os eu nulla finibus, quis rutrum magna tincidunt. Sed et turpis a arcu commodo ullamcorp
-                er quis sit amet lorem. Donec tincidunt eros ac velit sollicitudin, id blandit enim pelle
-                ntesque. Integer bibendum consequat ante ac efficitur. Suspendisse fringilla, lacus non solli
-                citudin posuere, felis elit malesuada metus, vel iaculis eros metus sit amet ex. Fusce posuer
-                e est sed sapien molestie, quis semper orci suscipit. Nunc tincidunt orci enim, vel pharetra neque ullamcor
-                iscing elit. Sed eget felis eget enim lobortis consequat id id ante. Fusce sodales er
-                os eu nulla finibus, quis rutrum magna tincidunt. Sed et turpis a arcu commodo ullamcorp
-                er quis sit amet lorem. Donec tincidunt eros ac velit sollicitudin, id blandit enim pelle
-                pi
-                citudin posuere, felis elit malesuada metus, vel iaculis eros metus sit amet ex. Fusce posuer
-                e est sed sapien molestie, quis semper orci suscipit. Nunc tincidunt orci enim, vel pharetra neque ullamcorper nec.</p>
-              <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
+              <p class="card-text"><small class="text-muted">John Doe: </small>Achei o tutorial útil<small class="text-muted"> 2023-05-01</small></p>
+              <p class="card-text"><small class="text-muted">Ana Pereira: </small>Podia tar mais completo<small class="text-muted"> 2023-04-28</small></p>
+              <p class="card-text"><small class="text-muted">Gabriel J: </small>Muito bem feito<small class="text-muted"> 2023-04-27</small></p>
+              <p class="card-text"><small class="text-muted">Bot123: </small>Comentario genérico<small class="text-muted"> 2023-04-05</small></p>
+              <p class="card-text"><small class="text-muted">Pedro Santos: </small>Achei o tutorial útil<small class="text-muted"> 2023-03-27</small></p>
+              <p class="card-text"><small class="text-muted">User94: </small>Já vi pior<small class="text-muted"> 2022-03-20</small></p>
               </div>
             </div>
             
@@ -137,12 +136,12 @@ We are ready to work with the Python.<br>
               <div class="card-body">
                 <h5 class="card-title">Edits History</h5>
                 <ul>
-                <li>04/04/2023</li>
-                <li>28/03/2023</li>
-                <li>14/03/2023</li>
-                <li>25/02/2023</li>
-                <li>22/02/2023</li>
-                <li>03/02/2023</li>
+                <li><a href="p4-5.html">04/04/2023</a></li>
+                <li><a href="p4-4.html">28/03/2023</a></li>
+                <li><a href="p4-3.html">14/03/2023</a></li>
+                <li><a href="p4-2.html">25/02/2023</a></li>
+                <li><a href="p4-1.html">22/02/2023</a></li>
+                <li><a href="p4-0.html">03/02/2023</a></li>
               </ul>
               </div>
             </div>
