--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Reddit Clone</title>
+  <title>ExplainME Homepage</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
