--- a/submit.html
+++ b/submit.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Submit</title>
+  <title>ExplainMe Submit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -26,9 +26,15 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="submit.html">New Post</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
             <a class="nav-link" href="#">Profile</a>
           </li>
         </ul>
+        
       </div>
     </div>
   </nav>
