--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -23,7 +23,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <form class="d-flex mx-auto">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 400px">
+          <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" style="width: 400px" id="myInput" onkeyup="filter()">
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -35,11 +35,11 @@
             <a class="nav-link" href="#">Profile</a>
           </li>
         </ul>
-        
       </div>
     </div>
   </nav>
-    
+  
+  
   
   <!-- Main content -->
   <main role="main">
