--- a/submit.html
+++ b/submit.html
@@ -22,7 +22,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <form class="d-flex mx-auto">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 400px">
+          <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" style="width: 400px" id="myInput" onkeyup="filter()">
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
