--- a/post4.html
+++ b/post4.html
@@ -136,7 +136,7 @@ We are ready to work with the Python.<br>
               <div class="card-body">
                 <h5 class="card-title">Edits History</h5>
                 <ul>
-                <li><a href="p4-5.html">04/04/2023</a></li>
+                <li><a href="post4.html">04/04/2023</a></li>
                 <li><a href="p4-4.html">28/03/2023</a></li>
                 <li><a href="p4-3.html">14/03/2023</a></li>
                 <li><a href="p4-2.html">25/02/2023</a></li>
